--- a/src/GitLibrary/GitLibrary.csproj
+++ b/src/GitLibrary/GitLibrary.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
       <PackageReference Include="TestableIO.System.IO.Abstractions.Wrappers" Version="22.0.16" />
+        <InternalsVisibleTo Include="GitLibrary.Test" />
     </ItemGroup>
 
 </Project>
